# vision

./: .gitignore  README.md
examples/square/: Cargo.toml
examples/square/src/: main.rs
tools/: shell.nix
vision/: CMakeLists.txt  Cargo.toml
vision/src/: CMakeLists.txt  lib.rs  vision.cc  vision.hh
vision/src/constraints/: mod.rs
vision/src/engine/: CMakeLists.txt  engine.cc  engine.hh  events.cc  events.hh  keyboard.cc  keyboard.hh  raytracer_engine.cc  raytracer_engine.hh
vision/src/math/: mod.rs
vision/src/math/vector/: mod.rs  vector.rs  vector2.rs  vector3.rs
vision/src/maths/: CMakeLists.txt  maths.hh  maths.hxx
vision/src/maths/ray/: CMakeLists.txt  hit_record.hh  ray.cc  ray.hh
vision/src/maths/vector/: CMakeLists.txt  vector.hh
vision/src/maths/vector/vector2/: CMakeLists.txt  vector2.cc  vector2.hh  vector2.hxx
vision/src/maths/vector/vector3/: CMakeLists.txt  vector3.cc  vector3.hh  vector3.hxx
vision/src/object/: CMakeLists.txt  fwd.hh  object.cc  object.hh
vision/src/object/sphere/: CMakeLists.txt  sphere.cc  sphere.hh
vision/src/render/: CMakeLists.txt  fwd.hh
vision/src/render/camera/: CMakeLists.txt  camera.cc  camera.hh  framebuffer.cc  framebuffer.hh
vision/src/render/material/: CMakeLists.txt  material.hh
vision/src/render/material/lambertian/: CMakeLists.txt  lambertian.cc  lambertian.hh
vision/src/render/renderer/: CMakeLists.txt  renderer.cc  renderer.hh
vision/src/rendering/: camera.rs  engine.rs  init.rs  mod.rs
vision/src/rendering/mesh/: mesh.rs
vision/src/rendering/object/: object.rs
vision/src/setup/: CMakeLists.txt  setup.cc  setup.hh
vision/src/tools/: CMakeLists.txt  sdltools.cc  sdltools.hh
vision/src/transform/: CMakeLists.txt  transform.cc  transform.hh
